@@ -388,7 +388,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkLabel" id="label31">
+		    <widget class="GtkLabel" id="type_label">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Type:</property>
 		      <property name="use_underline">False</property>
@@ -437,7 +437,7 @@ Prefer 2G (GPRS/EDGE)</property>
 		  </child>
 
 		  <child>
-		    <widget class="GtkLabel" id="label32">
+		    <widget class="GtkLabel" id="band_label">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Band:</property>
 		      <property name="use_underline">False</property>
